--- a/css/styles.css
+++ b/css/styles.css
@@ -3,22 +3,33 @@
     --pressed-state: #404bbf;
     --text: #434455;
     --headings-color: #2E2F42;
-    --background: #F4F4FD
+    --background: #F4F4FD;
+    --second-background: #ffffff;
 }
 
 body {
     font-family: roboto, sans-serif;
     font-weight: 500;
     color: var(--text);
+    letter-spacing: 0.02em;
 }
+
+/* common */
 
 .link {
     text-decoration: none;
+    color: inherit;
 }
 
 .list {
     list-style: none;
 }
+
+.button {
+    cursor: pointer;
+}
+
+/* header */
 
 .logo {
     font-family: raleway;
@@ -63,29 +74,33 @@ body {
     color: var(--pressed-state);
 }
 
+/* main page studio */
+
 .headline {
     font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
-    color: white;
+    color: var(--second-background);
 }
 
 .hero {
-    background: #2E2F42;
+    background-color: var(--headings-color);
 
 }
 
 .main-button {
-    color: white;
+    color: var(--second-background);
     background-color: var(--brand-color);
     font-family: inherit;
+    font-weight: inherit;
     font-size: 16px;
     line-height: 1.5;
 
 }
 
-.button {
-    cursor: pointer;
+.main-button:hover,
+.main-button:focus {
+    background-color: var(--pressed-state);
 }
 
 .feature-title {
@@ -108,7 +123,7 @@ body {
 }
 
 .team-background {
-    background-color: #F4F4FD
+    background-color: var(--background);
 }
 
 .team-title {
@@ -130,11 +145,13 @@ body {
 }
 
 .employee-card {
-    background: white;
+    background: var(--second-background);
 }
 
+/* footer */
+
 .footer {
-    background: var(--headings-color);
+    background-color: var(--headings-color);
 }
 
 .bottom-logo {
@@ -146,4 +163,37 @@ body {
     font-size: 16px;
     line-height: 1.5;
     color: var(--background);
+}
+
+/* main page portfolio */
+
+.filter-button {
+    color: var(--brand-color);
+    background-color: var(--background);
+    font-family: inherit;
+    font-weight: inherit;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+}
+
+.filter-button:hover,
+.filter-button:focus {
+    background-color: var(--pressed-state);
+    color: var(--second-background);
+}
+
+
+.name-of-project {
+    color: var(--headings-color);
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+}
+
+
+.filtered-type {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
 }
