--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ body {
 
 .logo {
     font-family: "Raleway", sans-serif;
+    font-style: normal;
     font-weight: 800;
     font-size: 18px;
     line-height: 1.17;
@@ -209,6 +210,7 @@ body {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
+    letter-spacing: 0.02em;
 }
 
 
