--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,7 @@ body {
     line-height: 1.5;
 }
 
-.tittle-doing {
+.title-doing {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
